--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=Vivelab
 
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Vivelab
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/vivelab
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 
