--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -61,10 +61,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -75,25 +77,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		   <groupId>io.jsonwebtoken</groupId>
-		   <artifactId>jjwt</artifactId>
-		   <version>0.9.1</version>
-	  </dependency>
-	   <dependency>
-	   <groupId>javax.xml.bind</groupId>
-	   <artifactId>jaxb-api</artifactId>
-	   <version>2.3.0</version>
-  	</dependency>
 	</dependencies>
 
 	<build>
