--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,14 +2,13 @@ spring.application.name=Vivelab
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/proyectoweb
+spring.datasource.url=jdbc:mysql://localhost:3306/vivelab
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 
